--- a/style.css
+++ b/style.css
@@ -1,11 +1,55 @@
 body {
-    font-family: "Helvetica", sans-serif;
+    font-family: "Times New Roman", sans-serif;
+    background: #222831;
+    color: #ddd;
 }
 
 h1 {
+    font-size: 60px;
     text-align: center;
+    padding: 12px;
+    margin-bottom: 160px;
+}
+
+#info {
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: 30px;
+    color: white;
 }
 
 .container1 {
     display: flex;
+    justify-content: center;
+    padding: 16px;
+    margin-bottom: 40px;
+    gap: 24px;
+}
+
+button {
+    font-weight: bold;
+    font-family: "Helvetica", sans-serif;
+    font-size: 60px;
+    color: #fac650;
+    background: #222831;
+}
+
+.container2 {
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    gap: 60px;
+    padding: 16px;
+}
+
+.subcontainer1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.subcontainer2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
