--- a/style.css
+++ b/style.css
@@ -2,18 +2,25 @@ body {
     font-family: "Times New Roman", sans-serif;
     background: #222831;
     color: #ddd;
+    margin: 0;
 }
 
 h1 {
     font-size: 60px;
-    text-align: center;
-    padding: 12px;
-    margin-bottom: 160px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 40px;
+    margin-top: 0px;
+    margin-bottom: 120px;
+    background: #111720;
 }
 
 #info {
     font-size: 50px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 30px;
     color: white;
 }
@@ -23,8 +30,19 @@ h1 {
     justify-content: center;
     padding: 16px;
     margin-bottom: 40px;
+    margin-top: 30px;;
     gap: 24px;
 }
+
+/*
+.touch {
+    font-weight: bold;
+    font-family: "Helvetica", sans-serif;
+    font-size: 60px;
+    color: #fac650;
+    background: #222831;
+}
+*/
 
 button {
     font-weight: bold;
@@ -32,6 +50,9 @@ button {
     font-size: 60px;
     color: #fac650;
     background: #222831;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container2 {
